--- a/app/src/main/res/layout/item_trip_photo.xml
+++ b/app/src/main/res/layout/item_trip_photo.xml
@@ -25,7 +25,7 @@
             android:id="@+id/likeButton"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/ic_like"
+            android:src="@drawable/ic_unliked"
             android:scaleType="fitCenter"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="Like" />
