--- a/app/src/main/res/layout/fragment_trip_detail.xml
+++ b/app/src/main/res/layout/fragment_trip_detail.xml
@@ -38,10 +38,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/photosRecyclerView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/header"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/emptyText"
