cleaned some long functions and fixed colors for UI

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:text="Start Trip"
-            android:backgroundTint="@color/blue_dark"
+            android:backgroundTint="#2593FA"
             android:textSize="12sp"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -124,9 +124,9 @@
         android:layout_marginBottom="-28dp"
         android:contentDescription="Add"
         android:src="@drawable/ic_add_picture"
-        app:backgroundTint="@color/teal_700"
-        app:fabCustomSize="72dp"
-        app:maxImageSize="36dp"
+        app:backgroundTint="#2196F3"
+        app:fabCustomSize="62dp"
+        app:maxImageSize="40dp"
         app:layout_constraintBottom_toTopOf="@id/custom_bottom_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
