--- a/app/src/main/res/layout/item_trip_card.xml
+++ b/app/src/main/res/layout/item_trip_card.xml
@@ -47,6 +47,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
+        <TextView
+            android:id="@+id/likesCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:textSize="14sp"
+            android:textColor="@android:color/darker_gray"
+            app:layout_constraintTop_toBottomOf="@id/tripDate"
+            app:layout_constraintStart_toStartOf="parent" />
+
         <Button
             android:id="@+id/endTripButton"
             android:layout_width="wrap_content"
@@ -54,7 +64,7 @@
             android:layout_marginTop="12dp"
             android:text="End Trip"
             android:visibility="gone"
-            app:layout_constraintTop_toBottomOf="@id/tripDate"
+            app:layout_constraintTop_toBottomOf="@id/likesCount"
             app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
