--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <style name="Theme.Travel" parent="Theme.Material3.DayNight.NoActionBar">
-
+        <item name="colorPrimary">#2196F3</item>
+        <item name="colorOnPrimary">@android:color/white</item>
     </style>
 </resources>
