--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -124,7 +124,7 @@
         android:layout_marginBottom="-28dp"
         android:contentDescription="Add"
         android:src="@drawable/ic_add_picture"
-        app:backgroundTint="#2196F3"
+        app:backgroundTint="#2593FA"
         app:fabCustomSize="62dp"
         app:maxImageSize="40dp"
         app:layout_constraintBottom_toTopOf="@id/custom_bottom_bar"
