--- a/app/src/main/res/layout/fragment_friend_profile.xml
+++ b/app/src/main/res/layout/fragment_friend_profile.xml
@@ -8,11 +8,12 @@
 
     <ImageButton
         android:id="@+id/backButton"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:src="@drawable/ic_back"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:contentDescription="Back"
+        android:scaleType="fitCenter"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
