--- a/app/src/main/res/layout/fragment_trip_detail.xml
+++ b/app/src/main/res/layout/fragment_trip_detail.xml
@@ -17,10 +17,10 @@
 
         <ImageButton
             android:id="@+id/backButton"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:src="@drawable/ic_back"
-            android:scaleType="centerInside"
+            android:scaleType="fitCenter"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="Back" />
 
