--- a/app/src/main/res/layout/fragment_friend_profile.xml
+++ b/app/src/main/res/layout/fragment_friend_profile.xml
@@ -44,13 +44,14 @@
         android:id="@+id/tripsLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="168dp"
+        android:layout_marginTop="20dp"
         android:text="Trips"
+        android:textColor="@android:color/black"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="@android:color/black"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@id/usernameText"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/usernameText" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tripsRecyclerView"
