--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:text="Start Trip"
+            android:text="Trips"
             android:backgroundTint="#2593FA"
             android:textSize="12sp"
             android:textColor="@color/white"
