--- a/app/src/main/res/layout/fragment_home_feed.xml
+++ b/app/src/main/res/layout/fragment_home_feed.xml
@@ -11,10 +11,10 @@
         android:id="@+id/titleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="156dp"
         android:text="TRAVEL"
         android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
